--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "firebase deploy"
   },
   "dependencies": {
+    "@animxyz/vue": "^0.5.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "normalize.css": "^8.0.1",
+    "swiper": "^5.2.0",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -20,10 +28,18 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
+    "stylelint": "^13.10.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard-scss": "^1.1.0",
+    "stylelint-scss": "^3.19.0",
+    "vue-cli-plugin-tailwind": "~2.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
