--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@animxyz/vue": "^0.5.0",
+    "@tailwindcss/postcss7-compat": "^2.0.3",
     "@vue/eslint-config-prettier": "^6.0.0",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
+    "postcss": "^7",
     "swiper": "^5.2.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-lazyload": "^1.3.3",
@@ -32,13 +35,16 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "google-fonts-webpack-plugin": "^0.4.4",
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.3.2",
     "stylelint": "^13.10.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-scss": "^3.19.0",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-cli-plugin-tailwind": "~2.0.1",
     "vue-template-compiler": "^2.6.11"
   }
