--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@animxyz/vue": "^0.5.0",
-    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@vue/eslint-config-prettier": "^6.0.0",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "postcss": "^7",
     "swiper": "^5.2.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-lazyload": "^1.3.3",
@@ -45,7 +45,7 @@
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-scss": "^3.19.0",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
-    "vue-cli-plugin-tailwind": "~2.0.1",
+    "vue-cli-plugin-tailwind": "^2.0.6",
     "vue-template-compiler": "^2.6.11"
   }
 }
